{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 417,
  "lineage": "9ad21800-a15e-e747-bfc5-cc9e52fbe350",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.5",
            "domain": "vpc",
            "id": "eipalloc-0f3145b65bea2c9db",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-88-249-221.compute-1.amazonaws.com",
            "public_ip": "54.88.249.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "CRAFTCMS-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "craftcms_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706205005497:internet-gateway/igw-043b0dbe0b7a932ae",
            "id": "igw-043b0dbe0b7a932ae",
            "owner_id": "706205005497",
            "tags": {
              "Name": "CRAFTCMS-IGW"
            },
            "vpc_id": "vpc-0b5663ec6c53d0695"
          },
          "dependencies": [
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "craftcms-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:706205005497:loadbalancer/app/craftcms-alb/4e2862baece66e2b",
            "arn_suffix": "app/craftcms-alb/4e2862baece66e2b",
            "dns_name": "craftcms-alb-1721342453.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:706205005497:loadbalancer/app/craftcms-alb/4e2862baece66e2b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "craftcms-alb",
            "security_groups": [
              "sg-0954633b86c3dc02a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09fcf591886828179"
              },
              {
                "subnet_id": "subnet-0c4520c7adef14e62"
              }
            ],
            "subnets": [
              "subnet-09fcf591886828179",
              "subnet-0c4520c7adef14e62"
            ],
            "tags": {
              "Name": "craftcms-alb"
            },
            "vpc_id": "vpc-0b5663ec6c53d0695",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.craftcms",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "carftcms_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:706205005497:listener/app/craftcms-alb/4e2862baece66e2b/a90c86c2fcfc8878",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:706205005497:targetgroup/craftcms-tg/a7de6cf27a4a7b84",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:706205005497:listener/app/craftcms-alb/4e2862baece66e2b/a90c86c2fcfc8878",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:706205005497:loadbalancer/app/craftcms-alb/4e2862baece66e2b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.craftcms-alb",
            "aws_lb_target_group.craftcms_tg",
            "aws_security_group.craftcms",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "craftcms_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:706205005497:targetgroup/craftcms-tg/a7de6cf27a4a7b84",
            "arn_suffix": "targetgroup/craftcms-tg/a7de6cf27a4a7b84",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:706205005497:targetgroup/craftcms-tg/a7de6cf27a4a7b84",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "craftcms-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b5663ec6c53d0695"
          },
          "dependencies": [
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3145b65bea2c9db",
            "id": "nat-0ee5fdda361ee6456",
            "network_interface_id": "eni-046e6cedcc68e91fc",
            "private_ip": "10.0.1.199",
            "public_ip": "54.88.249.221",
            "subnet_id": "subnet-09fcf591886828179",
            "tags": {
              "Name": "CRAFTCMS -NAT-GW"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-069fe517df0d24be31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ee5fdda361ee6456",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-069fe517df0d24be3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-gateway-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-043b0dbe0b7a932ae",
            "id": "r-rtb-02f1c0ced000535341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f1c0ced00053534",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.craftcms_igw",
            "aws_route_table.public-route-table",
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-069fe517df0d24be3",
            "owner_id": "706205005497",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-Route-Table"
            },
            "vpc_id": "vpc-0b5663ec6c53d0695"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02f1c0ced00053534",
            "owner_id": "706205005497",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "vpc_id": "vpc-0b5663ec6c53d0695"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014fb366409f8ee73",
            "route_table_id": "rtb-069fe517df0d24be3",
            "subnet_id": "subnet-0fb990c459adbd695"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04774243384df80b8",
            "route_table_id": "rtb-069fe517df0d24be3",
            "subnet_id": "subnet-02a5e3f09fa42b784"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0d65902b2101a83",
            "route_table_id": "rtb-069fe517df0d24be3",
            "subnet_id": "subnet-0c9e86290823e4b40"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-3",
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9b36ffcfe722441",
            "route_table_id": "rtb-02f1c0ced00053534",
            "subnet_id": "subnet-09fcf591886828179"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0530f0e32ba64b614",
            "route_table_id": "rtb-02f1c0ced00053534",
            "subnet_id": "subnet-0c4520c7adef14e62"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f032d4d35b543b83",
            "route_table_id": "rtb-02f1c0ced00053534",
            "subnet_id": "subnet-0aabbc7ec96a895e4"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-3",
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "craftcms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706205005497:security-group/sg-0954633b86c3dc02a",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0954633b86c3dc02a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "craftcms",
            "name_prefix": "",
            "owner_id": "706205005497",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "craftcms"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5663ec6c53d0695"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706205005497:security-group/sg-043600c926dadd0aa",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-043600c926dadd0aa",
            "ingress": [],
            "name": "my-rds-sg",
            "name_prefix": "",
            "owner_id": "706205005497",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b5663ec6c53d0695"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mysql_inbound_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2363010763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-043600c926dadd0aa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysql-sg",
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706205005497:subnet/subnet-0fb990c459adbd695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0fb990c459adbd695",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706205005497",
            "tags": {
              "Name": "private_subnet1"
            },
            "vpc_id": "vpc-0b5663ec6c53d0695"
          },
          "dependencies": [
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706205005497:subnet/subnet-02a5e3f09fa42b784",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-02a5e3f09fa42b784",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706205005497",
            "tags": {
              "Name": "private_subnet2"
            },
            "vpc_id": "vpc-0b5663ec6c53d0695"
          },
          "dependencies": [
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706205005497:subnet/subnet-0c9e86290823e4b40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0c9e86290823e4b40",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706205005497",
            "tags": {
              "Name": "private_sunet3"
            },
            "vpc_id": "vpc-0b5663ec6c53d0695"
          },
          "dependencies": [
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706205005497:subnet/subnet-09fcf591886828179",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09fcf591886828179",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706205005497",
            "tags": {
              "Name": "public_subnet1"
            },
            "vpc_id": "vpc-0b5663ec6c53d0695"
          },
          "dependencies": [
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706205005497:subnet/subnet-0c4520c7adef14e62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c4520c7adef14e62",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706205005497",
            "tags": {
              "Name": "public_subnet2"
            },
            "vpc_id": "vpc-0b5663ec6c53d0695"
          },
          "dependencies": [
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706205005497:subnet/subnet-0aabbc7ec96a895e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0aabbc7ec96a895e4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706205005497",
            "tags": {
              "Name": "public_sunet3"
            },
            "vpc_id": "vpc-0b5663ec6c53d0695"
          },
          "dependencies": [
            "aws_vpc.craftcms-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "craftcms-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706205005497:vpc/vpc-0b5663ec6c53d0695",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b2ea62523ca2db8",
            "default_route_table_id": "rtb-04b0a01bd1a209be0",
            "default_security_group_id": "sg-01e36f968b1697e8b",
            "dhcp_options_id": "dopt-7ae9bc00",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b5663ec6c53d0695",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04b0a01bd1a209be0",
            "owner_id": "706205005497",
            "tags": {
              "Name": "CRAFTCMS-VPC"
            }
          }
        }
      ]
    }
  ]
}